--- a/storefront/package.json
+++ b/storefront/package.json
@@ -34,6 +34,8 @@
     "@stripe/stripe-js": "^1.29.0",
     "algoliasearch": "^4.20.0",
     "axios": "^1.6.7",
+    "emailjs-com": "^3.2.0",
+    "framer-motion": "^11.3.31",
     "lodash": "^4.17.21",
     "next": "^14.0.0",
     "pg": "^8.11.3",
@@ -41,6 +43,7 @@
     "react": "^18.2.0",
     "react-country-flag": "^3.0.2",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.0",
     "react-instantsearch-hooks-web": "^6.29.0",
     "react-intersection-observer": "^9.3.4",
     "server-only": "^0.0.1",
