--- a/backend/package.json
+++ b/backend/package.json
@@ -29,15 +29,15 @@
     "@medusajs/currency": "preview",
     "@medusajs/customer": "preview",
     "@medusajs/event-bus-local": "preview",
+    "@medusajs/event-bus-redis": "preview",
     "@medusajs/file": "preview",
     "@medusajs/file-local-next": "preview",
     "@medusajs/fulfillment": "preview",
     "@medusajs/fulfillment-manual": "preview",
     "@medusajs/inventory-next": "preview",
-    "@medusajs/medusa": "preview",
+    "@medusajs/medusa": "1.20.3",
     "@medusajs/notification": "preview",
     "@medusajs/notification-local": "preview",
-    "@medusajs/event-bus-redis": "preview",
     "@medusajs/notification-sendgrid": "preview",
     "@medusajs/order": "preview",
     "@medusajs/payment": "preview",
